# TorusSQL

./: .gitignore  README.md  rust-toolchain.toml  rustfmt.toml
torussql_client/: Cargo.toml
torussql_client/src/: client.rs  main.rs  meta.rs  terminal.rs
torussql_sdk/: Cargo.toml
torussql_sdk/src/: lib.rs  log.rs
torussql_server/: Cargo.toml
torussql_server/src/: main.rs
torussql_server/src/compiler/: lexer.rs  mod.rs  parser.rs
torussql_server/src/compiler/codegen/: ddl.rs  mod.rs
torussql_server/src/compiler/lexer/: mod.rs  token.rs
torussql_server/src/compiler/parser/: ast.rs  mod.rs
torussql_server/src/sql/: lexer.rs  mod.rs
