# Project name: TorusSQL.
# Description: Relational database management system.
# Licence: GPL-3.0.
# Author: Alexander (@alkuzin).

# Project package info section.
[package]
name        = "torussql_client"
description = "TorusSQL RDBMS client"
version     = "0.0.0"
authors     = ["Alexander (GitHub: @alkuzin)"]
repository  = "https://github.com/alkuzin/TorusSQL"
license     = "GPL-3"
edition     = "2024"

# Project dependencies section.
[dependencies]
# TorusSQL SDK crate.
torussql_sdk = { path = "../torussql_sdk" }
# C programming language standard library wrapper.
libc = "1.0.0-alpha.1"
# Date & time management crate.
chrono = "0.4.41"
