# Project name: TorusSQL.
# Description: Relational database management system.
# Licence: GPL-3.0.
# Author: Alexander (@alkuzin).

# Project package info section.
[package]
name        = "torussql_sdk"
description = "Standard development kit (SDK) for TorusSQL RDBMS"
version     = "0.0.0"
authors     = ["Alexander (GitHub: @alkuzin)"]
repository  = "https://github.com/alkuzin/TorusSQL"
license     = "GPL-3"
edition     = "2024"

# Settings for the library part of the project.
[lib]
# Crate should be built as a standard library.
crate-type = ["lib"]

# Project dependencies section.
[dependencies]
# Date & time management crate.
chrono = "0.4.41"
