# Project name: TorusSQL.
# Description: Relational database management system.
# Licence: GPL-3.0.
# Author: Alexander (@alkuzin).

# Project package info section.
[package]
name        = "torussql_server"
description = "TorusSQL RDBMS server"
version     = "0.0.0"
authors     = ["Alexander (GitHub: @alkuzin)"]
repository  = "https://github.com/alkuzin/TorusSQL"
license     = "GPL-3"
edition     = "2024"

# Project dependencies section.
[dependencies]
# TorusSQL SDK crate.
torussql_sdk = { path = "../torussql_sdk" }
# Date & time management crate.
chrono = "0.4.41"
